--- a/style.css
+++ b/style.css
@@ -7,15 +7,13 @@
 .row{
     display: flex;
     height: 100%;
-}
-.item{
-    flex-basis: 50%;
+    justify-content: space-between;
 }
 .btn{
     display: inline-block;
     padding: 20px 40px;
     border-radius: 1000px;
-    background-image: linear-gradient(orange,orangered);
+    background-image: linear-gradient(to right, orange,orangered);
 }
 .btn a{
     text-decoration: none;
@@ -27,23 +25,32 @@
     justify-content: center;
     margin: auto;
 }
-h1{
-    font-size: 60px;
-    margin-bottom: 20px;
-}
 h2{
     color: gray;
     font-size: 25px;
-    margin-bottom: 20px;
+    margin-bottom: 25px;
 }
-span{
+.orange-color{
     color: rgb(252, 114, 63);
 }
 /* Navbar starts here */
 .nav-bar{
     background-image: linear-gradient(orange,orangered);
+    width: 100%;
 }
-
+.nav-bar h1{
+    font-size: 3rem;
+    text-shadow: 2px 2px 8px gray;
+    color: white;
+}
+.title{
+    flex-basis: 50%;
+    text-align: right;
+    justify-content: center;
+    padding-top: 20px;
+    padding-right: 0;
+    height: 100%;
+}
 li{
     display: inline-block;
     padding: 30px 10px;
@@ -52,11 +59,12 @@ li{
     list-style: none;
     display: block;
     text-decoration: none;
-    padding: 5px;
-    font-weight: bold;
-    font-size: 18px;
+    font-size: 1rem;
     color: white;
     transition: 1s;
+}
+.link-container{
+    flex-basis: 40%;
 }
 .link-container ul li::after{
     content: '';
@@ -73,11 +81,10 @@ li{
 li a:hover{
     transform:scale(1.2);
 }
-
 .logo{
-    display: inline-block;
     border: 5px solid white;
-    margin-top: 15px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     margin-left: 50px;
     border-radius: 50%;
 }
@@ -89,7 +96,7 @@ li a:hover{
 }
 .link-container{
     text-align: right;
-    margin-right: 5%;
+    margin-right: 1%;
     padding: 10px;
 }
 /* Navbar ends here */
@@ -97,6 +104,13 @@ li a:hover{
 .banner{
     height: 90vh;
     padding-left:70px;
+}
+.item{
+    flex-basis: 50%;
+}
+.banner h1{
+    font-size: 60px;
+    margin-bottom: 20px;
 }
 .banner-photo img{
     height:90% ;
@@ -113,15 +127,21 @@ li a:hover{
 /* banner ends here */
 /* about-me starts here */
 .about-me{
-    height: 60vh;
+    height: 55vh;
     background-image: url("images/background.png");
     background-repeat: no-repeat;
     background-size: cover;
 }
+.my-photo{
+    width: 50%;
+    height: 100%;
+    margin-left: 200px;
+}
 .my-photo img{
-    height: 90%;
-    padding-left: 200px;
-    padding-top: 50px;
+    height: 95%;
+    padding-left: 100px;
+    padding-top: 30px;
+
 }
 .about-me p{
     display: inline-block;
@@ -133,3 +153,36 @@ li a:hover{
     width: 70%;
 }
 /* about-me ends here */
+/* Recipies starts here */
+.Recipies{
+    width: 70%;
+    margin: auto;
+    margin-top: 80px;
+    text-align: center;
+}
+.card{
+    flex-basis: 30%;
+}
+.food-photo img{
+    width: 100%;
+}
+.food-item{
+    margin-top: 40px;
+    height: 100%;
+    display: flex;
+    text-align: left;
+    justify-content: space-around;
+
+}
+.card{
+    padding: 10px;
+    border-radius: 15px;
+    box-shadow: 2px 2px 8px gray;
+}
+.food-description{
+    padding:  10px 0px;
+}
+.food-description h3{
+    margin-bottom: 10px;
+}
+/* Recipies ends here */
