--- a/style.css
+++ b/style.css
@@ -166,7 +166,7 @@ li a:hover{
 .food-photo img{
     width: 100%;
 }
-.food-item{
+.card-item{
     margin-top: 40px;
     height: 100%;
     display: flex;
@@ -177,7 +177,7 @@ li a:hover{
 .card{
     padding: 10px;
     border-radius: 15px;
-    box-shadow: 2px 2px 8px gray;
+    box-shadow: 2px 2px 8px 2px gray;
 }
 .food-description{
     padding:  10px 0px;
@@ -186,3 +186,25 @@ li a:hover{
     margin-bottom: 10px;
 }
 /* Recipies ends here */
+/* followers starts here */
+.followers{
+    width: 68%;
+    margin: auto;
+    margin-top: 80px;
+    box-shadow: 2px 2px 15px 2px gray;
+    border-radius: 10px;
+}
+.media{
+    margin-top: 10px;
+    justify-items: center;
+}
+.media h2{
+    color: black;
+    font-weight: bolder;
+    font-size: 2rem;
+    margin-bottom: 5px;
+}
+.followers-container{
+    padding: 15px 20px;
+}
+/* followers ends here */
