--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@
     padding: 20px 40px;
     border-radius: 1000px;
     background-image: linear-gradient(to right, orange,orangered);
+    transition: .5s;
+}
+.btn:hover{
+    transform: scale(1.1);
 }
 .btn a{
     text-decoration: none;
@@ -51,7 +55,7 @@ h2{
     padding-right: 0;
     height: 100%;
 }
-li{
+.link-container li{
     display: inline-block;
     padding: 30px 10px;
 }
@@ -189,8 +193,7 @@ li a:hover{
 /* followers starts here */
 .followers{
     width: 68%;
-    margin: auto;
-    margin-top: 80px;
+    margin: 80px auto;
     box-shadow: 2px 2px 15px 2px gray;
     border-radius: 10px;
 }
@@ -208,3 +211,79 @@ li a:hover{
     padding: 15px 20px;
 }
 /* followers ends here */
+/* contact-us starts here */
+.contact-us{
+    width: 90%;
+    margin: 20px auto;
+    padding: 30px;
+    box-shadow: 2px 2px 8px gray;
+    border-radius: 10px;
+}
+.contact{
+    text-align: center;
+    margin-top: 20px;
+}
+.map-div iframe{
+ width: 100%;
+}
+.contact-item{
+    flex-basis: 50%;
+}
+.contact-info{
+    text-align: left;
+    padding-top: 40px;
+    padding-left: 90px;
+    font-size: 1.5rem;
+}
+.contact-info p{
+    font-size: 1rem;
+}
+/* contact-us starts here */
+/* footer starts here */
+footer{
+    text-align: center;
+    width: 100%;
+    background-color: black;
+}
+footer li{
+    display: inline-block;
+    margin: 10px;
+    padding: 10px;
+    border: 4px solid white;
+    border-radius: 50%;
+    transition: .4s;
+}
+footer li:hover{
+    background-color: white;
+    transform: scale(1.1);
+}
+.fa-facebook{
+    transition: .5s;
+}
+footer li:hover .fa-facebook{
+    color: blue;
+}
+footer li:hover .fa-youtube-play{
+    color: red
+}
+footer li:hover .fa-instagram{
+    color: darkred;
+}
+footer li:hover .fa-dribbble{
+    color: darkslateblue;
+}
+.fa-heart{
+   color: red;
+}
+footer p{
+    color: white;
+    margin: 10 0px; 
+}
+footer .fa{
+    font-size: 2rem;
+    color: white;
+}
+.footer{
+    padding: 10px;
+}
+/* footer Ends here */
