--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@ li a:hover{
     height:90% ;
     padding-left: 20%;
     padding-top: 9%;
+    padding-bottom: 10px;
 }
 
 .banner p{
@@ -150,7 +151,6 @@ li a:hover{
 .about-me p{
     display: inline-block;
     font-size: 20px;
-
     margin-bottom: 30px;
 }
 .my-info{
