--- a/style.css
+++ b/style.css
@@ -264,7 +264,7 @@ footer li:hover .fa-facebook{
     color: blue;
 }
 footer li:hover .fa-youtube-play{
-    color: red
+    color: red;
 }
 footer li:hover .fa-instagram{
     color: darkred;
